--- a/my-app/src/components/styles/Form.module.css
+++ b/my-app/src/components/styles/Form.module.css
@@ -1,82 +1,115 @@
+.formContainer {
+  display: grid;
+}
+
 main {
-    background-color: rgba(128, 128, 128, 0.052);
-    width: 90%;
-    height: auto;
-    margin: 50px 50px 0 100px;
-  }
-  
-  form {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-    padding: 40px;
-    align-content: center;
-  }
-  
-  main h5 {
-    margin: 100px 0 0 10px;
-  }
-  
-  form label {
-    font-family: Arial, Helvetica, sans-serif;
-    display: block;
-    padding: 5px;
-    min-height: 10px;
-    cursor: pointer;
-    font-size: 30px;
-  }
-  
-  form input {
-    border-color: gray;
-    width: 80%;
-    height: 40px;
-    border: 2px solid rgba(128, 128, 128, 0.264);
-  }
-  
-  form input:focus {
-    border: 2px solid red;
-  }
-  
-  .sexo{
-    display: flex;
-    flex-direction: column;
-  }
-  .buttons{
-    display: inline-flex;
-    margin-left: -100px;
-    margin-right: 80px;
-  }
-  
-  
-  .buttonContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  
-  }
-  
-  .buttonContainer button{
-    width: 200px;
-    height: 60px;
-    margin: 0 50px 50px 10px;
-  }
-  
-  .cancelar{
-    background-color: rgba(128, 128, 128, 0.668);
-    border:none;
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-    border-radius: 4px;
-  }
-  
-  .enviar{
-    background-color: rgb(187, 187, 42);
-    border:none;
-    color: white;
-    font-weight: bold;
-    font-size: 25px;
-    border-radius: 4px;
-  }
-  
-  
+  background-color: rgba(128, 128, 128, 0.052);
+  width: 95%;
+  height: auto;
+  padding: 10px;
+  margin: 50px 50px 0 45px;
+}
+
+form {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 40px;
+  align-content: center;
+}
+
+p {
+  margin: 50px 0 0 50px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+form label {
+  text-align: left;
+  font-family: Arial, Helvetica, sans-serif;
+  display: block;
+  padding: 5px;
+  cursor: pointer;
+  font-size: 30px;
+}
+
+input {
+  border-color: gray;
+  width: 80%;
+  height: 40px;
+  border: 2px solid rgba(128, 128, 128, 0.264);
+}
+
+.sexo {
+  display: grid;
+  margin-bottom: 5px;
+}
+
+.labelSex {
+  margin-right: 150px;
+}
+
+.buttons {
+  display: inline-flex;
+  margin-right: 250px;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.buttonContainer button {
+  width: 240px;
+  height: 60px;
+  margin: 0 50px 50px 10px;
+}
+
+.cancelar {
+  background-color: rgba(128, 128, 128, 0.668);
+  border: none;
+  color: white;
+  font-weight: bold;
+  font-size: 25px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.enviar {
+  background-color: gold;
+  border: none;
+  color: black;
+  font-weight: bold;
+  font-size: 25px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.redColor {
+  color: red;
+  font-size: x-large;
+}
+
+.reactivo {
+  width: 100%;
+  height: 100px;
+  background-color: rgba(128, 128, 128, 0.052);
+  margin-top: -57px;
+}
+
+.reactivo h6 {
+  color: rgba(126, 122, 122, 0.83);
+  font-size: 25px;
+  font-weight: normal;
+  margin-left: 30px;
+  /* margin-top: 30px; */
+}
+
+.reactivo h3 {
+  color: rgba(15, 15, 15, 0.83);
+  font-size: 40px;
+  font-weight: normal;
+  margin-left: 25px;
+  margin-top: -60px;
+}
