--- a/my-app/src/components/styles/Header.module.css
+++ b/my-app/src/components/styles/Header.module.css
@@ -1,29 +1,48 @@
-.container{
-    display: flex;
-    flex-direction: row;
-    /* align-content: space-between; */
-    border-bottom-color: red;
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border: solid 0.2em transparent;
+  border-bottom-color: gold;
+  width: 100%;
+  height: 100px;
 }
 
-.menu img{
-margin: 50px;
-width: 50px;
+.menu img {
+  width: 50px;
+  margin: 30px;
 }
 
-.grupoS{
-    margin-left: 35%;
-    margin-right: 30%;
+.logo img {
+  width: 120px;
+  margin: 5px;
 }
 
-.grupoS img {
-margin: 30px;
-width: 140px;
+.userContainer {
+  display: flex;
+  flex-direction: row;
 }
 
-.user{
- display: flex;
- flex-direction: row;
- margin-top: 40px;
+.names h6 {
+  font-size: 15px;
+  margin-top: 20px;
+  margin-right: 20px;
 }
 
+.img1 {
+  width: 80px;
+  margin-top: 5px;
+  margin-left: 5px;
+}
 
+.img2 {
+  width: 17px;
+  margin-right: -50px;
+}
+
+.date p {
+  font-size: 15px;
+  font-weight: normal;
+  margin-right: 5px;
+  margin-top: 25px;
+}
