--- a/my-app/src/components/styles/Form.module.css
+++ b/my-app/src/components/styles/Form.module.css
@@ -18,10 +18,14 @@ form {
   align-content: center;
 }
 
+img{
+margin-bottom:10px;}
+
 p {
-  margin: 50px 0 0 50px;
-  font-size: 20px;
-  font-weight: bold;
+  margin: 20px 0 0 50px;
+  font-size: 22px;
+  font-weight:700;
+  color: rgba(15, 15, 15, 0.83);
 }
 
 form label {
